@@ -12,6 +12,9 @@
 # monitored with this plugin.
 #
 # $Log$
+# Revision 1.9  2005/01/29 21:17:27  jimmyo
+# Added madwifi support to linux/if_* plugins.
+#
 # Revision 1.8  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -68,7 +71,7 @@ fi
 
 if [ "$1" = "suggest" ]; then
 	if [ -r /proc/net/dev ]; then
-		egrep '(eth|wlan)' /proc/net/dev | cut -f1 -d: | sed 's/ //g'
+		egrep '(eth|wlan|ath)' /proc/net/dev | cut -f1 -d: | sed 's/ //g'
 		exit 0
 	else
 		exit 1
