@@ -22,6 +22,7 @@ munin (work)
   * Plugins: Make generic/postfix_mailstats catch more formats (Deb#292110).
   * Plugins: Added plugin generic/hddtemp_smartctl, made by Lupe Christoph.
     Made it the default hddtemp plugin.
+  * Plugin: Added madwifi support to linux/if_* plugins.
   * Installation: Make the single python plugin use @@PYTHON@@ again.
   * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).
 
